# testiranje

./: .coverage  model.pth  pyproject.toml
.github/workflows/: tests.yaml
tests/: __init__.py  test_data.py  test_model.py
